# code_Reverse

./: README.md
src/: CMakeLists.txt  open_Win32.bat  open_Win64.bat  update_Win32.bat  update_Win64.bat
src/CreateRemoteThread/src/: main.cpp
src/CreateRemoteThread_DLL/src/: main.cpp
src/CreateRemoteThread_VirtualAllocEx/src/: main.cpp
src/DBG_TOOL_STD_CALL/src/: main.cpp
src/DBG_TOOL_x64_CALL_TEST/src/: main.cpp
src/DBG_TOOL_x64_IF_TEST/src/: main.cpp
src/DBG_TOOL_x64_REGISTER_TEST/src/: main.cpp
src/DBG_TOOL_x86_CALL_TEST/src/: main.cpp
src/DBG_TOOL_x86_MFC_DLL/: CMakeLists.txt
src/DBG_TOOL_x86_MFC_DLL/include/: MFCCheckBox.h  MFCCheckBoxDlg.h
src/DBG_TOOL_x86_MFC_DLL/src/: MFCCheckBox.rc  MFCCheckBoxDlg.cpp  resource.h
src/DBG_TOOL_x86_WHILE_TEST/: CMakeLists.txt
src/DBG_TOOL_x86_WHILE_TEST/src/: main.cpp
src/assembly/: CMakeLists.txt
src/cmake/: CommonTools.cmake
src/vsconf/: CMakeLists.txt
src/vsconf/src/: main.cpp
src/vsconf2/generate/: encryptor.py  generate_shellcode.bat  shellcode.c
src/vsconf2/src/: main.cpp
